INFRA-13738 Remodel Surgical Approach to Procedural Approach